--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </head>
     <body>
         <script>
-            location.replace("https://forms.office.com/pages/responsepage.aspx?id=OqOPBtoJfU-ngjgL5IPFZEiWPJd_R9VLiGdHzTL67FtUNUhaTUFYVDhVOVk5UjMyQkVZRE1LREZMUS4u");
+            location.replace("https://forms.office.com/r/fUgT8B1XYA");
         </script>
         <div class="main">
-            <a href="https://forms.office.com/pages/responsepage.aspx?id=OqOPBtoJfU-ngjgL5IPFZEiWPJd_R9VLiGdHzTL67FtUNUhaTUFYVDhVOVk5UjMyQkVZRE1LREZMUS4u">Click here if you are not redirected</a>
-            <a href="https://forms.office.com/pages/responsepage.aspx?id=OqOPBtoJfU-ngjgL5IPFZEiWPJd_R9VLiGdHzTL67FtUNUhaTUFYVDhVOVk5UjMyQkVZRE1LREZMUS4u">Cliquer ici si vous n &apos;êtes pas redirigé·e</a>
+            <a href="https://forms.office.com/r/fUgT8B1XYA">Click here if you are not redirected</a>
+            <a href="https://forms.office.com/r/fUgT8B1XYA">Cliquer ici si vous n &apos;êtes pas redirigé·e</a>
         </div>
     </body>
 </html>
